--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -24,6 +24,7 @@ android {
 }
 
 dependencies {
+    implementation 'org.openftc:easyopencv:1.3.2'
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
