--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     implementation 'org.openftc:easyopencv:1.3.2'
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+//    implementation 'org.apache.commons:commons-math3:3.6.1'
 }
